--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <script src="JS/angular.min.js"></script>
     <script src="JS/app.js"></script>
     
-    <title>Bútorfesték</title>
+    <title>DIY Barkácsárúház</title>
 </head>
 <body>
     <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="navicon" src="IMG/588409.png" alt=""></a>
+          <a class="navbar-brand"><img class="navicon" src="IMG/588409.png" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,19 +24,19 @@
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="index.html">Festékek</a>
               <a class="nav-link" href="wood.html">Faanyagok</a>
-              <a class="nav-link" href="#">Szerszámkatalógus</a>
-              <a class="nav-link" href="#">Rólunk</a>
+              <a class="nav-link" href="tools.html">Szerszámkatalógus</a>
+              <a class="nav-link" href="about.html">Rólunk</a>
             </div>
           </div>
         </div>
       </nav>
-
+      <header class="padding center"><h1>Válasszon színt</h1></header>
       <div class="container">
-        <header class="padding"><h1>Válasszon színt</h1></header>
+        
           <main>
             <div class="row">
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Amethyst (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -44,7 +44,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Égkék (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -52,7 +52,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Acélkék (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -60,7 +60,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Tavasz Zöld (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -70,7 +70,7 @@
             </div>
             <div class="row">
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Barna (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -78,7 +78,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Arany (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -86,7 +86,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Ezüst (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -94,7 +94,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Bíbor (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -104,7 +104,7 @@
             </div>
             <div class="row">
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Cián (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -112,7 +112,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Májva (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -120,7 +120,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Fehér (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
@@ -128,7 +128,7 @@
                 <b>Egységár:</b> 2500 Ft/liter</p>
               </div>
               <div class="column  img-thumbnail">
-                <img class="img-fluid image" src="IMG/festek.jpg.png" alt="">
+                <img class="img-fluid image" src="IMG/festek.png" alt="">
                 <p class="text"><b>Albert Beltéri Falfesték Fekete (2 liter)</b></p>
                 <p class="text"><b>Gyártó:</b> Hat szivárvány nyrt. <br>
                 <b>Felhasználás:</b> beltér <br>
